Make Sass & Remove Unnecessary Importants	_layout.scss Sticky Header Serach	Search Box Alignment Fix Wordpress Top Header	Wordpress Top Header Position Fixed In Responsive Header Style 2	Top Social Align Center In Responsive Pagination	Pagination Arrow Design Fix In Responsive Header Style 1 and 2	Sticky Header Design Fix In 1200px Width

--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -997,7 +997,23 @@
                 }
             }
             #header.sticky-header {
-                width: 102%;
+                max-width: 100%;
+                width: 100%;
+                left: 0;
+                right: 0;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            body #header.sticky-header{
+                margin-left: auto !important;
+            }
+        }
+
+
+        @media screen and (max-width: 767px) {
+            .single-page-navigation .nav-previous,
+            .single-page-navigation .nav-next{
+                text-align: center;
             }
         }
 
