--- a/assets/sass/_icomoon.scss
+++ b/assets/sass/_icomoon.scss
@@ -241,7 +241,7 @@
 }
 
 .t4p-icon-shopping-cart:before {
-    content: '\e90c' !important;
+    content: '\e90c';
 }
 
 .t4p-icon-menu:before {
